@@ -170,79 +170,6 @@ class TestEvent:
         ]
 
 
-class TestSyncEvent:
-
-    def test_syncevent_get_wait(self, kernel):
-        results = []
-
-        def evt_set(evt):
-            evt.set()
-
-        async def event_setter(evt, seconds):
-            results.append('sleep')
-            await sleep(seconds)
-            results.append('event_set')
-            evt_set(evt)
-
-        async def event_waiter(evt):
-            results.append('wait_start')
-            results.append(evt.is_set())
-            await evt.wait()
-            results.append('wait_done')
-            results.append(evt.is_set())
-            evt.clear()
-            results.append(evt.is_set())
-
-        async def main():
-            evt = Event()
-            t1 = await spawn(event_waiter, evt)
-            t2 = await spawn(event_setter, evt, 1)
-            await t1.join()
-            await t2.join()
-
-        kernel.run(main())
-        assert results == [
-            'wait_start',
-            False,
-            'sleep',
-            'event_set',
-            'wait_done',
-            True,
-            False
-        ]
-
-    def test_syncevent_get_immediate(self, kernel):
-        results = []
-
-        def evt_set(evt):
-            evt.set()
-
-        async def event_setter(evt):
-            results.append('event_set')
-            evt_set(evt)
-
-        async def event_waiter(evt, seconds):
-            results.append('sleep')
-            await sleep(seconds)
-            results.append('wait_start')
-            await evt.wait()
-            results.append('wait_done')
-
-        async def main():
-            evt = Event()
-            t1 = await spawn(event_waiter, evt, 1)
-            t2 = await spawn(event_setter, evt)
-            await t1.join()
-            await t2.join()
-
-        kernel.run(main())
-        assert results == [
-            'sleep',
-            'event_set',
-            'wait_start',
-            'wait_done',
-        ]
-
 
 class TestLock:
 
